# Graphics-Engine

./: .gitignore  CMakeLists.txt  Drawing3D.cpp  Drawing3D.h  Figure.cpp  Figure.h  InfLight.cpp  InfLight.h  LSystem.cpp  LSystem.h  LSystem_help.txt  LineDrawer.cpp  LineDrawer.h  README.md  draw2Dlines_call.txt  easy_image.h  engine.cc  ini_configuration.cc  l_parser.h
ini/examples/: l_systems001.ini
ini/l_systems/: hexagonfractal.L2D  test.L2D  test.ini
ini/line_drawings/: line_drawings024.ini  test.ini
ini/random/: filelist  l_systems001.ini
ini/wireframes/: wireframes000.ini  wireframes034.ini
ini/z_buffering/: z_buffering0730.ini
l_systems/: 32_segment_curve_(copy).L2D  mytest.L2D
src/: Color.cpp  Color.h  Drawing3D.cpp  Drawing3D.h  Figure.cpp  Figure.h  FigureParser.cpp  LSystem.cpp  Light.cpp  Light.h  LightParser.cpp  LineDrawer.cpp  LineDrawer.h  Lsystem2D_parser.cpp  MyLSystem2D.cpp  MyLSystem2D.h  MyLSystem3D.cpp  MyLSystem3D.h  MyParser.cpp  MyParser.h  MyTools.cpp  MyTools.h  Solid3D.cpp  Solid3D.h  Transformations.cpp  Transformations.h  ZBuffer.cpp  ZBuffer.h  drawing_dispatcher.cpp  engine.cc
src/tools/: ini_configuration.h
tools/: easy_image.cc  l_parser.h  vector3d.cc  vector3d.h
wireframes2/: wireframes001.ini  wireframes002.ini  wireframes003.ini  wireframes004.ini  wireframes005.ini
zbuff_wireframes/: z_buffered_wireframes118.2.ini
